# ibl-manifold

./: .gitignore  LICENSE  Makefile  README.md  config.yml  pyproject.toml
manifold/: cluster_decoding.py  compute_all_stats.py  compute_neurometric_stats.py  engagement_manifolds.py  ephys_engagement_decode.py  ephys_feedback_decode.py  ephys_stimulus_neurometrics.py  feedback_settings_template.py  og_manifold_analysis.py  pca_manifold.py  reaction_time.py  rnn_manifolds.py  wifi_trialdata.py  zero_contrast_engagement.py
manifold/decoding/: README.md  fit_data.py  fit_data_feedback.py  prepare_data.py
manifold/decoding/functions/: behavior_targets.py  estimators.py  neurometric.py  nulldistributions.py  utils.py
notebooks/: check_engagement_ouptut.ipynb  engagement_decoders.ipynb  engagement_prior_modulation.ipynb  feedback_decoder.ipynb  fit_engagement_feedback.ipynb  manifold_dags.ipynb  neurometric.ipynb  neurometric_nulls.ipynb  noisy_rnn.ipynb  reaction_time.ipynb  rnn_manifolds.ipynb  sebi_engagement.ipynb
